--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "untitled",
+  "name": "AstroMind",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/Yangchenguang0/AstroMind",
+  "homepage": "https://Yangchenguang0.github.io/AstroMind",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -22,12 +24,6 @@
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
